# hsl-color-range

./: main.py  pyproject.toml
static/: styles.css
templates/: base.html.j2  index.html.j2
