[tool.poetry]
name = "hsl-selector"
version = "0.1.0"
description = ""
authors = ["dolsen0 <derek.olsen@gmail.com>"]
readme = "README.md"
packages = [{include = "hsl_selector"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
